--- a/switchcontrol/control/templates/splash.html
+++ b/switchcontrol/control/templates/splash.html
@@ -1,7 +1,51 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Switcher!</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  </head>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand">Switch</a>
+
+</nav>
+
+<div class="container">
+	<div class="row">
+		<div class="col-4"></div>
+		
+		<div class="col-4">
+		<div class="btn-group">
+		
+		<a href="{% url 'turnon' %}" {% if gpio_state is 1 %}class="btn btn-secondary active btn-lg"{% else %}class="btn btn-secondary btn-lg"{% endif %}>On</a>
+		
+		<a href="{% url 'turnoff' %}" {% if gpio_state is 0 %}class="btn btn-secondary active btn-lg"{% else %}class="btn btn-secondary btn-lg"{% endif %}>Off</a>
+		</div>
+		
+		<div class="col-4"></div>
+		
+		</div>
+	</div>
+</div>
+<!--
 <ul>
-	<li><a>You're at the splash.</a></li>
+	<li><a>Status</a></li>
 	<li><a>The state of GPIO Pin {{ gpio_pin }} is {% if gpio_state is 1 %}on{% else %}off{% endif %}.</a></li>
 	<li><a href="{% url 'turnoff' %}">turnoff</a></li>
 	<li><a href="{% url 'turnon' %}">turnon</a></li>
 	
 </ul>
+-->
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+</body>
+</html>
